 * Fix the key for toggling team bars being incorrectly described
 * Fix caption of stats screen showing only one winner if multiple teams have won
 * Remove broken “Play again” button appearing in stats page after an online game
 * Weapons scheme editor: When leaving, it no longer flickers and the selection is not reset to Default
 * Team editor: Fix old team being retained when renaming a team

Content Creation:
 + Theme objects can now have more than 1 in-land rect specified. You can specify the amount in theme.cfg by adding another number (and ,) before the first rect
 + Theme objects can now be placed on water (by setting first in-land rectangle to 0,0,0,0)
 + Themes can now use flakes with negative falling speed (rising flakes)
 + Themes can now contain custom sound files: splash.ogg Droplet1.ogg Droplet2.ogg Droplet3.ogg skip.ogg
 + Themes can now have mirrored clouds and flakes: CloudsL.png, SDCloudsL.png, FlakeL.png, SDFlakeL.png
 + Water in themes supports custom animation and flow speed with water-animation and sd-water-animation in theme.cfg
 + Simplified hat format for unanimated hats; a single 32×32 image is enough. For clan hats, use size 64×32, with the color overlay at the right
 + Ammos.png and Ammos_bw.png in HWPs are now overlayed over the base images; use transparent icons to keep them unchanged from the original
 * Default water color was black instead of blue

Translations:
 + Scottish Gaelic updates for: Engine, frontend, tips, missions
 + Loading screen can now be translated
 + A few window titles can be translated
 + Campaign names and campaign mission names can be translated
 + A Classic Fairytale, missions 8 and 10 can now be translated
 * Built-in texts from Qt (e.g. “cut”, “paste”, “copy”) in frontend weren't translated
 * Remove text from mission images to make them language-neutral
 * Fix English-only language/country names in language selection
 * Fix very, very broken mission map descriptions

Lua-API: